--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="light-blue">
         <div class="nav-wrapper container">
-          <a href="#" class="brand-logo">Drink Maker</a>
+          <a href="#" class="brand-logo" id="home-page-link">Drink Maker</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="#">List Drinks</a></li>
             <li><a href="#">Create Drinks</a></li>
@@ -24,34 +24,6 @@
       </nav>
       <div class="container">
           <div id="main"></div>
-            <h1>Drink List</h1>
-            <table>
-                <thead>
-                  <tr>
-                      <th>Name</th>
-                      <th>Item Name</th>
-                      <th>Item Price</th>
-                  </tr>
-                </thead>
-        
-                <tbody>
-                  <tr>
-                    <td>Alvin</td>
-                    <td>Eclair</td>
-                    <td>$0.87</td>
-                  </tr>
-                  <tr>
-                    <td>Alan</td>
-                    <td>Jellybean</td>
-                    <td>$3.76</td>
-                  </tr>
-                  <tr>
-                    <td>Jonathan</td>
-                    <td>Lollipop</td>
-                    <td>$7.00</td>
-                  </tr>
-                </tbody>
-              </table>
       </div>
 
     
