--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="nav-wrapper container">
           <a href="#" class="brand-logo" id="home-page-link">Drink Maker</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="#">List Drinks</a></li>
+            <li><a href="#" id="drink-list-link">List Drinks</a></li>
             <li><a href="#">Create Drinks</a></li>
             
           </ul>
